--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,6 +34,9 @@ stages:
     - script: './node_modules/.bin/node-sass $(wwwrootDir) --output $(wwwrootDir)'
       displayName: 'Compile Sass assets'
 
+    - script: echo "DAS IST EIN TEST."
+      displayName: 'TEST OUTPUT'
+
     - task: gulp@1
       displayName: 'Run gulp tasks'
 
