Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,6 +4,7 @@ trigger:
 variables:
   buildConfiguration: 'Release'
   releaseBranchName: 'release'
+  date: $(date:dd)
 
 stages:
 - stage: 'Build'
@@ -28,7 +29,7 @@ stages:
 
     - script: echo "DAS IST EIN TEST."
       displayName: 'TEST OUTPUT'
-      condition: and(succeeded(), eq($(date:dd),14))
+      condition: and(succeeded(), eq($(date),14))
     - task: Npm@1
       displayName: 'Run npm install'
       inputs:
