--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,7 +29,7 @@ stages:
 
     - script: echo "DAS IST EIN TEST."
       displayName: 'TEST OUTPUT'
-      condition: and(succeeded(), eq($(date),14))
+      condition: and(succeeded(), eq($(date),'14'))
     - task: Npm@1
       displayName: 'Run npm install'
       inputs:
