--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,10 +1,14 @@
 trigger:
 - '*'
 
+schedules:
+- cron: "5 * * * 0,1,2,3,5,6"
+  displayName: Daily build
+  always: true
+
 variables:
   buildConfiguration: 'Release'
   releaseBranchName: 'release'
-  date: $(date:dd)
 
 stages:
 - stage: 'Build'
@@ -29,7 +33,7 @@ stages:
 
     - script: echo "DAS IST EIN TEST."
       displayName: 'TEST OUTPUT'
-      condition: and(succeeded(), eq($(date),'14'))
+      condition: and(succeeded(), eq(,))
     - task: Npm@1
       displayName: 'Run npm install'
       inputs:
